# aprsfmt

./: .clinerules  .gitignore  CMakeLists.txt  Makefile  README.md
include/: arguments.h  position.h
libs/: CMakeLists.txt
src/: arguments.c  main.c  position_compressed.c  position_uncompressed.c
test/: main_test.c  test.c  test_position.h  test_position_compressed.h  test_sum.h
